--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^1.5.1",
+    "@ionic/storage": "^2.2.0",
     "@ngx-meta/core": "^8.0.2",
     "core-js": "^2.5.4",
     "firebase": ">= 5.5.7 <8",
