--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@capacitor/core": "1.5.0",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.0",
+    "@capacitor/core": "^1.5.1",
+    "@ionic-native/core": "^5.22.0",
+    "@ionic-native/splash-screen": "^5.22.0",
+    "@ionic-native/status-bar": "^5.22.0",
+    "@ionic/angular": "^5.0.4",
     "@ionic/pwa-elements": "^1.5.1",
     "@ionic/storage": "^2.2.0",
     "@ngx-meta/core": "^8.0.2",
@@ -43,8 +43,8 @@
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@capacitor/cli": "1.5.0",
-    "@ionic/angular-toolkit": "^2.1.1",
+    "@capacitor/cli": "^1.5.1",
+    "@ionic/angular-toolkit": "^2.2.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
